@@ -1,13 +1,19 @@
-FROM maven:3.9.7-amazoncorretto-21 as maven
+FROM maven:3.9.9-eclipse-temurin-25-noble as maven
 WORKDIR /solon
 COPY pom.xml pom.xml
 COPY src src
-RUN mvn compile assembly:single -q
+RUN mvn compile assembly:single -q -DskipTests
 
-FROM openjdk:21-jdk-slim
+FROM eclipse-temurin:25-jdk-noble
 WORKDIR /solon
 COPY --from=maven /solon/target/hello-solon.jar app.jar
 
 EXPOSE 8080
 
-CMD ["java", "-server", "-cp", "app.jar", "hello.Main"]
+CMD ["java", \
+     "-server", \
+     "-XX:+UseZGC", \
+     "-XX:+ZGenerational", \
+     "-Dlogging.level.root=OFF", \
+     "-Dsolon.logging.appender.console.enable=false", \
+     "-cp", "app.jar", "hello.Main"]
